@@ -1,5 +1,8 @@
 Changes for APR 1.3.0
 
+  *) Utilise Solaris' native atomic_* functions for apr_atomics
+     where appropriate. [Colm MacCarthaigh]
+
   *) Make apr_socket_recvfrom initialize the port field in the from
      sockaddr.  PR 39325 [Anthony Minessale <anthmct yahoo.com>]
 
